2014-01-17  Ryosuke Niwa  <rniwa@webkit.org>

        Host DoYouEvenBench on webkit.org
        https://bugs.webkit.org/show_bug.cgi?id=127185

        Reviewed by Benjamin Poulain.

        Added webkit.org/perf/DoYouEvenBench.

        * perf/DoYouEvenBench: Added.
        * perf/DoYouEvenBench/index.html: Copied from PerformanceTests/DoYouEvenBench/Full.html.

2014-01-03  Alex Christensen  <achristensen@webkit.org>

        Added GStreamer to list of required tools for compiling webkit.
        https://bugs.webkit.org/show_bug.cgi?id=126319

        Reviewed by Philippe Normand.

        * building/tools.html:
        Mentioned that QuickTime and QuickTime SDK are only required for AppleWin.
        Added GStreamer installers to list of required tools for WinCairo.

2013-12-25  Ryosuke Niwa  <rniwa@webkit.org>

        Add a description about webkit-patch setup-git-clone to checkout.html
        https://bugs.webkit.org/show_bug.cgi?id=126217

        Reviewed by Philippe Normand.

        Added.

        * building/checkout.html:

2013-12-13  Roger Fong  <roger_fong@apple.com>

        Update build instructions for Windows following upgrade to VS2013.

        * building/tools.html:

2013-11-30  Mark Rowe  <mrowe@apple.com>

        <https://webkit.org/b/125027> Update the analytics account used by webkit.org

        Switch to a Google Analytics id that's accessible to someone that's involved with the WebKit project.

        Reviewed by Sam Weinig.

        * footer.inc: Remove the old analytics code.
        * header.inc: Add the new stuff.

2013-10-29  Beth Dakin  <bdakin@apple.com>

        Just updating the sample code for this potential blog post.

        * blog-files/regions/pizza-is-amazing.png: Replaced.
        * blog-files/regions/unstyled-article.png: Replaced.
        * demos/regions/pizza-regions-manifesto-regionstyling.html:
        * demos/regions/pizza-regions-manifesto.html:

2013-10-18  Tibor Meszaros  <tmeszaros@inf.u-szeged.hu>
